# juicebox

./: .gitignore
ferris/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
ferris/crates/binary-sidecar/: Cargo.toml
ferris/crates/binary-sidecar/src/: lib.rs  main.rs
ferris/crates/binary-sidecar/src/utils/: architecture.rs  mod.rs  platform.rs
ferris/crates/wifi-handshake/: Cargo.toml
ferris/crates/wifi-handshake/src/: config.rs  installer.rs  main.rs  runtime.rs  utils.rs  web_server.rs  wpa_manager.rs
ferris/crates/wifi-handshake/src/installer/: autoap.rs  configuration.rs  confirmation.rs  mod.rs  service_config.rs  system_check.rs  systemd_network.rs  verify.rs  wpa_supplicant.rs
ferris/crates/wifi-handshake/static/: config.html
ferris/crates/wpa-events/: Cargo.toml  README.md
ferris/crates/wpa-events/src/: event.rs  handler.rs  lib.rs  monitor.rs
ferris/src/: binary_initializer.rs  main.rs  ui_state_controller.rs
ferris/src/desktop/: mod.rs  webview.rs  window.rs
ferris/src/server/: globals.rs  mod.rs  state.rs
ferris/src/server/actors/: mod.rs  song_coordinator.rs  video_downloader.rs  video_searcher.rs
ferris/src/server/routes/: admin.rs  healthcheck.rs  karaoke.rs  mod.rs  sse.rs  streaming.rs  sys.rs
ferris/src/server/utils/: dash_processor.rs  mod.rs  yt_downloader.rs  yt_searcher.rs
goldie/: .env.example  bun.lockb  package.json  vite.config.ts
goldie/src/: App.tsx  index.css
goldie/src/api/: api-types.ts  queryKeys.ts
goldie/src/api/queries/: useAutoApStatus.ts  useServerIp.ts
goldie/src/components/autoap-qr-code/: component.tsx
goldie/src/components/qr-code/: component.tsx
goldie/src/components/splash/: component.tsx
phippy/: .env.example  bun.lockb  package.json  vite.config.ts
phippy/src/: index.css
phippy/src/api/sse/: eventSource.ts
phippy/src/components/search-dialog/: component.tsx
