[package]
name = "juicebox"
version = "0.1.0"
edition = "2021"
default-run = "juicebox"
build = "build.rs"

[[bin]]
name = "bundle-app"
path = "src/bin/bundle-app.rs"

[workspace]
members = [
    "crates/binary-sidecar",
]

[dependencies]
async-channel = "2.3.1"
axum-core = "=0.5.0" 
axum = { version = "0.8.1", features = ["macros"] }
axum-embed = "0.1.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
binary-sidecar = { path = "crates/binary-sidecar" }
config = "0.15.8"
dirs = "6.0.0"
dotenv = "0.15.0"
futures-util = "0.3.31"
home = "0.5.11"
local-ip-address = "0.6.3"
once_cell = "1.20.3"
quick-xml = { version = "0.37.2", features = ["serialize"] }
rand = "0.8.5"
regex = "1.11.1"
rust-embed = "8.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
tao = "0.32.6"
thiserror = { version = "2.0.11", features = ["std"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
unidecode = "0.3.0"
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
wry = "0.50.1"
tauri-bundler = "2.4.0"
serde-value = "0.7.0"
toml = "0.8.21"
cargo-config = "0.1.1"
dunce = "1.0.5"
tauri-utils = "2.4.0"

[build-dependencies]
glob = "0.3"

