[package]
name = "binary-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["full"] }
flate2 = "1.1.0"
reqwest = { version = "0.12.12", features = ["json"] }
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.19.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["fs", "full", "macros", "rt"] }
tracing = "0.1.41"
walkdir = "2.5.0"
xz2 = "0.1.7"
zip = "2.2.3"
